# labclaw

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml
labclaw/: __init__.py  api.py  claim_picker.py  cli.py  clustering.py  daemon.py  demo_bench.py  e2b_runner.py  eval_harness.py  evidence_critic.py  figures.py  gemini_pi.py  ledger.py  multimodal_reader.py  openai_client.py  openai_pi.py  pipeline.py  report.py  reproduce_loop.py  sources.py  speed_demo.py  telegram.py  verify.py
samples/: reader-output.json  tiny-ml-claim.md
testing/: agent2-issue-16-reader-swarm.md  agent2-issue-21-speed-demo.md  agent3-issue-19-evidence-critic.md  codex-claim-picker.md  codex-issue-12-heartbeat-ledger.md  codex-issue-13-gemini-pi.md  codex-issue-17-e2b-runner.md  codex-issue-18-eval-harness.md  codex-multimodal-reader.md  feat-demo-ui-integration.md
tests/: test_claim_picker.py  test_clustering.py  test_daemon.py  test_daemon_pipeline.py  test_e2b_runner.py  test_eval_harness.py  test_evidence_critic.py  test_figures.py  test_gemini_pi.py  test_multimodal_reader.py  test_pipeline.py  test_report.py  test_sources.py  test_speed_demo.py  test_telegram.py  test_verify.py
tests/fixtures/: arxiv_atom.xml  github_search.json
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: demo-dashboard.tsx  site-nav.tsx  theme-toggle.tsx
web/lib/: api.ts
