[project]
name = "labclaw"
version = "0.1.0"
description = "Always-on AI scientist that fact-checks ML/code claims with multimodal evidence and VM experiments."
requires-python = ">=3.9"
dependencies = ["cerebras-cloud-sdk>=1.50.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
labclaw-read = "labclaw.multimodal_reader:main"
labclaw-speed-demo = "labclaw.speed_demo:main"
labclaw-bot = "labclaw.telegram:main"
labclaw = "labclaw.daemon:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
